@@ -1,13 +1,17 @@
 package com.wanted.ailienlmsprogram.continent.service;
 
-import com.wanted.ailienlmsprogram.continent.dto.ContinentDetailResponse;
+import com.wanted.ailienlmsprogram.continent.dto.ContinentAllResponseDTO;
 import com.wanted.ailienlmsprogram.continent.entity.Continent;
 import com.wanted.ailienlmsprogram.continent.repository.ContinentRepository;
+import com.wanted.ailienlmsprogram.global.exception.BusinessException;
+import com.wanted.ailienlmsprogram.global.exception.ErrorCode;
 import lombok.RequiredArgsConstructor;
+import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -15,36 +19,33 @@ import java.util.List;
 public class ContinentService {
 
     private final ContinentRepository continentRepository;
+    private final ModelMapper modelMapper;
 
-    public List<Continent> findAllContinents() {
-        return continentRepository.findAll();
-    }
+    // 대륙 전체 조회
+    public List<ContinentAllResponseDTO> findAllContinents(String query) {
 
-    public List<Continent> searchContinents(String query) {
-        if (query == null || query.trim().isEmpty()) {
-            return continentRepository.findAll();
+        List<Continent> continentList;
+
+        if(query == null || query.trim().isBlank()) {
+            continentList = continentRepository.findAll();
+        } else {
+            String result = query.trim();
+            continentList = continentRepository.findByContinentNameContaining(result);
         }
 
-        String keyword = query.trim();
-
-        return continentRepository
-                .findByContinentNameContainingIgnoreCaseOrDescriptionContainingIgnoreCaseOrderByContinentNameAsc(
-                        keyword, keyword
-                );
+        return continentList.stream()
+                .map(continent -> modelMapper.map(continent , ContinentAllResponseDTO.class))
+                .collect(Collectors.toList());
     }
 
-    public Continent findById(Long continentId) {
-        return continentRepository.findById(continentId)
-                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 대륙입니다."));
-    }
+    // 대륙 상세 조회
+    public ContinentAllResponseDTO getContinentDetail(Long continentId) {
 
-    public ContinentDetailResponse findContinentDetail(Long continentId) {
-        Continent continent = findById(continentId);
+        Continent continent = continentRepository.findById(continentId)
+                .orElseThrow(() -> new BusinessException(ErrorCode.NOT_FOUND, "존재하지 않는 대륙입니다."));
 
-        return new ContinentDetailResponse(
-                continent,
-                continentRepository.findPublishedCoursesByContinentId(continentId),
-                continentRepository.findTop10PostsByContinentId(continentId)
-        );
+        ContinentAllResponseDTO continentAllResponseDTO = modelMapper.map(continent, ContinentAllResponseDTO.class);
+
+        return continentAllResponseDTO;
     }
 }
